// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  padding: 20px;
}

<form
  className="new-class c0"
  id="formId"
  noValidate={true}
  onSubmit={[Function]}
/>
`;

exports[`renders with default props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  padding: 20px;
}

<form
  className="c0"
  onSubmit={[Function]}
/>
`;
